--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -408,5 +408,38 @@ There are so many recordings, it's hard know where to begin. As you migght expec
 
 The Cliburn/Reiner (RCA) should har been a better performance, but pianist an. conductor seem to be phoning it in (the 4t on the same disc, is no better). Serkin (Sony) as usual, plays it straight, but Bernstein dances capers around him---different but exciting Connoisseurs favor the straightforward Kempff/Leitner, so I'd better mention the but as my comments about their whole st suggest, I find them too reticent. Edwin Fischer and Furtwängler (EMI) are perhaps the most Apollonian of all---a performance so beautiful it must be mentioned despite (very good) monaural sound. Bachauer and Skrowaczenski are more earthbound (earthy?) but still expansive. Among more recent recordings, Kissin/Levine is uncommonly commanding and expressive, Kissin a less fastidious pianist than Brendel. Katchen is in his element, and if his conductor, Gamba, is not the most invetive of accompanists, he is at least suppoting without drawing the wrong kind of attention to himself. Carl Bauman approved the Firkusny/Steinberg (same disc as 3), but we wonder if the sound, despite refurbishment for CD, isn't showing its age.
 
- 
+\startrectable
+Sets: & \\
+\hline\\
+\quad Ashkenazy/Solti & Decca 443 723\\
+\quad Fleisher/Szell & Sony 48397 or 47658,\\
+& or 48165, 46549\\
+\quad Rubinstein/Leinsdorf & RCA 63057 (1+3), \\
+& 63058 (4+5), \\
+& 63059 (2)\\[1em]
+\hline\\
+\endrectable
+\bigskip
+
+\begin{tabular}{l l r}
+1: & Richter/Munch & RCA\\
+ & Michelangeli/Giulini & DG 449 757\\
+1+3: & Kissin/Levine & Sony 62926\\
+3+ 4 + 5: & Katchen/Gamba & Decca 440 839\\
+4: & Weissenberg/Karajan & EMI 66092 (+Triple)\\
+5: & Gould/Stokowski & Sony\\
+& Kissin/Levine & Sony
+\end{tabular}
+
+\section{Violin Concerto}
+
+One name stands out: Heifetz. Joseph Magil put it best in his review of RCA's reissue: Heifetz's enchanting playing makes this one of the greatest examples of violin tone reproduction on record. Somehow his exotic tone weaves webs of enchantment from burning, unsensual sound; and the accompaniment from the Boston Symphony and Munch is superlative.
+Other recordings are more warmly human, like Menuhin/Furtwängler (but that's monaural sound) and Stern/Barenboim (Sony), which has a richer-toned New York Philharmonic than in Stern/Bernstein (Sony). Zukerman/Barenboim (DG) is in almost the same class; you might prefer the Chicago Symphony's more incisive edge (detractors would say ``harder'').
+
+Accardo/Giulini is sabotaged by Accardo's thin tone and mannered playing; Giulini's slack, slow accompaniment is nowhere near as good as what he did for Perlman (EMI), which at least benefitted from rich, beautiful violin tone (Giulini's conducting still lacked assertiveness). The recent Bell/Norrington goes on the ho-hum pile, with its distant, detached, unromantic solo work and plodding accompaniment. At least Hilary Hahn (Sony) gives us lovely playing, but Zinman makes the orchestra's part uninspiring and superficial. Milstein (EMI) links poetic artistry with virtuosity and has a great rapport with conductor Steinberg.
+Mutter's more recent account with Masur
+(DG) struck our reviewer as more a calculated display of feeling than an expression of genuine feeling. The recording she made as a teenager (DG) is less mannered, and conductor Karajan was still in good, though expansive, form. Francescatti (Sony) doesn't have the most beguiling tone, but Bruno Walter's expansive conducting is a definite plus.
+
+The piano version of this concerto is the composer's arrangement, with the solo part recast for the piano's right hand and busywork added for the left. Barenboim, playing and conducting the English Chamber Orchestra, was probably the best, but DG has reissued it only
+
 \end{document}
