--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -441,5 +441,41 @@ Mutter's more recent account with Masur
 (DG) struck our reviewer as more a calculated display of feeling than an expression of genuine feeling. The recording she made as a teenager (DG) is less mannered, and conductor Karajan was still in good, though expansive, form. Francescatti (Sony) doesn't have the most beguiling tone, but Bruno Walter's expansive conducting is a definite plus.
 
 The piano version of this concerto is the composer's arrangement, with the solo part recast for the piano's right hand and busywork added for the left. Barenboim, playing and conducting the English Chamber Orchestra, was probably the best, but DG has reissued it only
+in a big set with many other pieces. RCA has yet to reissue Peter Serkin with Ozawa—--a fine recording. Don't bother with the hectic, slapdash Mustonen (Decca) when you can have Pietro Spada/Gibson (ASV): majestic, warm, and deeply-felt—a rival for the violin version.
+
+\startrectable
+Heifetz/Munch & RCA 68980\\
+Stern/Barenboim & Sony 42613\\
+Zukerman/Barenboim & DG 435 099\\
+Menuhin/Furtwängler & EMI 66990\\
+Mutter/Karajan & DG 457 861\\
+Milstein/Steinberg & EMI 67584 \\
+Francescatti/Walter & Sony 47659
+\endrectable
+
+\bigskip
+\noindent
+Piano Version:
+
+\startrectable
+Barenboim & DG 453707\\
+Serkin/Ozawa & RCA\\
+Spada/Gibson & ASV 911
+\endrectable
+
+\section{Triple Concerto}
+
+The Triple Concerto is not as exalted a work as the 4th or 5th Piano Concerto or the Violin Concerto, but it is a tuneful, cheerful work, and the combination is pleasant. Beethoven's Archduke Trio is one of the greatest---if not the greatest---piano trios, so it is fitting that he supplied the only regularly performed concerto for this configuration. In the last overview, we favored the Trio Fontenay (Teldec), but many will prefer Perlman-Ma-Barenboim (EMI) or Oistrakh-Rostropovich-Richter/Karajan (EMI), which displays four great artists at the peaks of their powers (even if you get better teamwork from an established trio). The recent Trio Wanderer (Chant du Monde) offers unanimity and polish from soloists, but James Conlon is just too fast and businesslike.
+
+\startrectable
+Oistrakh-Rostropovich-Richter/Karajan & EMI 66092 (+PC4)\\
+Perlman-Ma-Barenboim & EMI 55516
+\endrectable
+
+\section{Overtures}
+
+As you collect the symphonies, you'll get the overtures as filler. If you want one-stop shopping that includes the rarely performed {\it Namensfeier}, Karajan (DG) is your best bet. It was done at about the same time as his 1970s symphony cycle. Atlanta/Levi (Telarc) is somewhat willful, with thick-textured, clogged, hollow sound. Kempe (Testament) is warm and musical, with first-rate playing by the Berlin Philharmonic but not much sense of abandon.
+Marriner is superficial, with little drama but good sound, and Harnoncourt offers dark-colored, craggy readings that Steven Haller says
+``convey the very essence of Beethoven''. However, Harnoncourt's hard, pushy conducting induces listener fatigue for some of us. Bernstein did these really well, so look for his recordings.
 
 \end{document}
