--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -139,7 +139,8 @@ Pierre Monteux recorded 1-8 for Decca (9, for some reason, for Westminster) in t
 stands up well now, but it often seems to skim the surface.
 The Boston Symphony plays well,
 but the performances are often merely facile and rarely moving.
-The Muti (EMI), made in Philadelphia in the 1980s, is a fine all-around group of interpretations. Some of them have been reissued on ultra-cheap Seraphim discs. The performances range from an exciting but bland Eroica to a memorable Ninth. Toscanini---Leibowitz speed and drive are there, but Muti also knows when the music has to slow down. The orchestra plays with a much leaner (but still burnished) sound than it did for Ormandy.
+
+The Muti (EMI), made in Philadelphia in the 1980s, is a fine all-around group of interpretations. Some of them have been reissued on ultra-cheap Seraphim discs. The performances range from an exciting but bland Eroica to a memorable Ninth. Toscanini-Leibowitz speed and drive are there, but Muti also knows when the music has to slow down. The orchestra plays with a much leaner (but still burnished) sound than it did for Ormandy.
 Ormandy (Sony) is in a class by himself---Beethoven for sound sensualists. The orchestra is in peak form, and Ormandy makes Beethoven less angry, pushy, or aggressive than just about anybody. Our Editor loves 1, 2, 4, and 9 and says 5 and 8 may be ``the best ever''; tempos are moderate but not draggy.
 
 Reiner (RCA) never recorded an integral set, but many of us would not want to do without the Chicago recordings he left us (1, 5, 6, 7, and 9 in stereo, a monaural 3): precision with power and fire. 5, 6, and 7 are among the best on disc. Solti recorded the symphonies twice (Decca) with the same orchestra. The earlier analog group from the 1970s is better, but on records at least Solti never ``got'' the 5th or the 9th. The performances are impulsive, pungent, and dramatic---hardly ``rock solid'' and ``granitic''. His late 1950s Vienna recordings of 3, 5 and 7 are less punchy and driven. Szell's (Sony) set is a perennial in the catalog, despite a weak Fifth,
@@ -401,7 +402,7 @@ Weissenberg/Karajan and Ashkenazy/Solti will have to duke it out for first place
 
 There are so many recordings, it's hard know where to begin. As you migght expect, Ashkenazy/Solti is at the top of the list as is the broad, majestic, Gould/Stokony (Sony), which is a demonstration that slow tempos do not always equal dull performances. Gould's piano is a bit clattery in loud passages, but he and Stokowski leave no doubt about why the piece is nicknamed Emperor. Arrau brings unerringly elegant, patrician tone to his recordings; some critics prefer the 16 account with Galliera, but I think it's edged out by the one with Haitink and a resplendent Concertgebouw Orchestra (Philips). The third Arrau was with Colin Davis; it has won few adherents among us.
 
-The Cliburn/Reiner (RCA) should have been a better performance, but pianist and conductor seem to be phoning it in (the 4th, on the same disc, is no better). Serkin (Sony) as usual, plays it straight, but Bernstein dances capers around him---different but exciting Connoisseurs favor the straightforward Kempff/Leitner, so I'd better mention the but as my comments about their whole set suggest, I find them too reticent. Edwin Fischer and Furtwängler (EMI) are perhaps the most Apollonian of all---a performance so beautiful it must be mentioned despite (very good) monaural sound. Bachauer and Skrowaczenski are more earthbound (earthy?) but still expansive. Among more recent recordings, Kissin/Levine is uncommonly commanding and expressive, Kissin a less fastidious pianist than Brendel. Katchen is in his element, and if his conductor, Gamba, is not the most inventive of accompanists, he is at least supporting without drawing the wrong kind of attention to himself. Carl Bauman approved the Firkusny/Steinberg (same disc as 3), but we wonder if the sound, despite refurbishment for CD, isn't showing its age.
+The Cliburn/Reiner (RCA) should have been a better performance, but pianist and conductor seem to be phoning it in (the 4th, on the same disc, is no better). Serkin (Sony) as usual, plays it straight, but Bernstein dances capers around him---different but exciting. Connoisseurs favor the straightforward Kempff/Leitner, so I'd better mention them, but as my comments about their whole set suggest, I find them too reticent. Edwin Fischer and Furtwängler (EMI) are perhaps the most Apollonian of all---a performance so beautiful it must be mentioned despite (very good) monaural sound. Bachauer and Skrowaczenski are more earthbound (earthy?) but still expansive. Among more recent recordings, Kissin/Levine is uncommonly commanding and expressive, Kissin a less fastidious pianist than Brendel. Katchen is in his element, and if his conductor, Gamba, is not the most inventive of accompanists, he is at least supporting without drawing the wrong kind of attention to himself. Carl Bauman approved the Firkusny/Steinberg (same disc as 3), but we wonder if the sound, despite refurbishment for CD, isn't showing its age.
 
 \startrectable
 Sets: & \\
