--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -118,7 +118,7 @@ Bernstein's earlier New York set (Sony) has good moments, but overall it's more 
 
 In contrast, Abbado's Berlin accounts (DG) are literal, unyielding, metronomic, and often monotonous. Why did DG go to the effort and expense to produce it? Despite fine moments here and there, Abbado does not make us feel
 that this is some of the greatest music ever written and here's what it means. The even-numbered symphonies come off better than the odd, but the playing is not particularly beautiful and the recorded sound is only so-so.
-Barenboim (Teldec) is also balanced and not too aggressive, but there are not many new ideas either. They are sober, balanced, and beautifully recorded-but, like Abbado, full price. I was not at all impressed with the Ninth, but Philip Haldeman liked the complete set very much. One person's un-fussy performance is another's boring one.
+Barenboim (Teldec) is also balanced and not too aggressive, but there are not many new ideas either. They are sober, balanced, and beautifully recorded---but, like Abbado, full price. I was not at all impressed with the Ninth, but Philip Haldeman liked the complete set very much. One person's un-fussy performance is another's boring one.
 
 No such reservations apply to Böhm (DG), who, like Bernstein, has the benefit of the Vienna Philharmonic. Böhm is not as impulsive as Bernstein, but his performances have a structural integrity and eloquence that put them in the first rank. The orchestra plays as well for him as they do for Bernstein. The Cluytens (EMI Seraphim) is something of a sleeper. He is often associated with French repertoire, but he had a great affinity for German music. One suspects that he was somewhat overshadowed by the many Austro-German masters still active. John McKelvey pronounced the performances clean, unrushed, and sensitive to rhythmic pulse and found this set competitive with Walter, Klemperer, Szell, and Böhm. Weaknesses: uninspired 3 and 9; strengths: great 5 and 7. Good news: it's available as separate, rock-bottom priced Seraphim discs.
 
@@ -170,7 +170,7 @@ Böhm &DG 439681 (1,2,4,5)\\
 
 Beethoven's first symphony appeared in 1801---Symphony No. 1 in the first year of a new century. As Leonard Bernstein pointed out, it wears its Haydnish clothes until the third movement, which is an amusingly speeded-up minuet. It's a light, classical piece, but clearly the work of a new voice. It requires a lighter touch than the later works; the aggressive approach does not serve it well. Conductors who do well in it (as well as 2, 4, and 8) are not necessarily the best in the heavier symphonies.
 
-Bernstein pretty much swept the field with his Vienna recording. It's full of high spirits and fizzy energy, with slightly weightier touches at the right times-the young Beethoven tweaking the nose of the Establishment. (One of our reviewers said, ``It hits you like a ton of happy bricks''.) However, Reiner, Karajan 1962, Szell, and the analog Solti (recommend-ed last time around) are almost as rewarding;
+Bernstein pretty much swept the field with his Vienna recording. It's full of high spirits and fizzy energy, with slightly weightier touches at the right times-the young Beethoven tweaking the nose of the Establishment. (One of our reviewers said, ``It hits you like a ton of happy bricks''.) However, Reiner, Karajan 1962, Szell, and the analog Solti (recommended last time around) are almost as rewarding;
 Monteux and Jochum are more poised. We found Dohnanyi and Leibowitz earthbound.
 Ormandy gives it more body and substance than usual. Sawallisch has the Concertgebouw Orchestra, but his lumpen approach doesn't say much with it or the music. This work is also the least strain for the period groups, so Hogwood, Norrington, and Brüggen all turn in credible but rather mechanical performances.
 
@@ -358,7 +358,7 @@ Conducting and playing the piano seems to be too much for one pair of hands in t
 Why bother when his set with Klemperer (EMI) is available with fresher, more concentrated pianism and a great conductor in impressive form. Tempos are slow, but the cumulative result is powerful.
 Szell paired up with two pianists, and neither set could be called slow. Fleisher/Szell (Sony) has plenty of precision and energy, piano virtuosity, and orchestral brilliance. For some it's one of the best available; many of us find it brusque and crusty and prefer the more open playing of Gilels (EMI). The same orchestral clarity and precision is there, but Gilels seems to have prevailed on Szell to relax a bit (only a bit!).
 
-Kempff/Leitner (DG) is another classic---considered by some the best ever-but its day
+Kempff/Leitner (DG) is another classic---considered by some the best ever---but its day
 may have passed. Kempff is a great classicist---thoughtful, with a balanced poise, clean style,
 a bright tone, and a certain understatement that works best in 2 and 4. His approach
 is congenial in the extroverted 1 and 5. Leitner's accompaniment is graceful but also unimaginative, and the sound just a tad outdated. You can get great sound on the Oppitz/Janowski (RCA), but ``industrial gray'' performances with not much to say and drab orchestral playing.
@@ -478,7 +478,7 @@ Marriner is superficial, with little drama but good sound, and Harnoncourt offer
 
 Beethoven wrote two ballets. The first is a trifling piece of juvenilia, but The Creatures of Prometheus dates from around 1800 and has much delightful music, though nobody will argue that it's on the same plain as the symphonies and concertos. The finale does use the theme that Beethoven later reworked and expanded for the finale of the Eroica Symphony. Someday Sony might reissue the Cleveland Orchestra/Louis Lane recording and make all other recommendations superfluous. For now, we will suggest the crisp Mackerras (Hyperion) and the nicely recorded but white-breadish Orpheus Chamber Orchestra (DG). We found Harnoncourt slow, dull, and charmless; the Müller-Brühl, if you can find it, is also broad: tempo but has more tensile strength.
 
-The Egmont Overture is a concert staple (try Solti, Szell, Bernstein, or Karajan), but the incidental music for Goethe's play that Beethoven wrote to go with it is much less familiar. One word: Szell (with Klausjürgen Wussow a narrator, Pilar Lorengar, and the Vienna Philharmonic-Decca 448 593). Other recordings come and go, but unless you have a spec interest in the piece, Szell will be all you need.
+The Egmont Overture is a concert staple (try Solti, Szell, Bernstein, or Karajan), but the incidental music for Goethe's play that Beethoven wrote to go with it is much less familiar. One word: Szell (with Klausjürgen Wussow a narrator, Pilar Lorengar, and the Vienna Philharmonic-Decca 448 593). Other recordings come and go, but unless you have a special interest in the piece, Szell will be all you need.
 
 \bigskip
 \hfill{\sc Hansen}
