--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -95,7 +95,7 @@ Even so, there are so many recordings that I had to set some ground rules. I dec
 That also rules out unusual, eccentric, or otherwise ``different'' performances. We're looking for strong, solid, compelling interpretations that will yield as much reward on the 50th or 500th listening as the first.
 
 I've also leaned toward recordings that are available (or likely to be again) at a local record store or on-line retailer. This does leave out some good-sounding but obscure-label items.
-Releases come and go from the catalog with such bewildering swiftness, and it's impossible o tell you exactly what's ``available'' at any given moment. If a record company is not currently offering a release, plenty of may still be in the pipeline, on dealers' shelves
+Releases come and go from the catalog with such bewildering swiftness, and it's impossible to tell you exactly what's ``available'' at any given moment. If a record company is not currently offering a release, plenty of may still be in the pipeline, on dealers' shelves
 (sometimes the cut-out bin), or available through Internet retailers. Used CDs are also a
 reasonable option, since the format isn't prey
 to the degradation that ordinary use inflicts on
