--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -86,7 +86,7 @@ There have been at least 50 recordings of the late symphonies, and they seem to 
 {\it Indulgent}: Bernstein, Rostropovich
 
 \item
-{it Balance and Grandeur}: Ormandy, Stokowski, Wit
+{\it Balance and Grandeur}: Ormandy, Stokowski, Wit
 
 \item
 {\it Moderate}: Litton, Slatkin, Mehta, Rozhdestvensky
