--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -1,65 +1,5 @@
 \documentclass[12pt]{article}%
-\usepackage{enumitem}
-\setcounter{secnumdepth}{0}
-
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[full]{textcomp}
-\usepackage{XCharter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
-\usepackage[cal=cm,scr=esstix]{mathalpha}
-\usepackage[papersize={7in, 10.0in}, left=.6in, right=.6in, top=.6in, bottom=.9in]{geometry}
-\linespread{1.05}
-\sloppy
-\raggedbottom
-\pagestyle{plain}
-
-% these include amsmath and that can cause trouble in older docs.
-\input{/Users/psu/arxiv-psu/helpers/cmrsum}
-\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\titlelabel{\thetitle.\quad}
-
-\usepackage{cite}
-\usepackage{microtype}
-
-\def\startrectable{\bigskip
-\begin{tabular}{ l r }}
-\def\endrectable{\end{tabular}}
-
-% hyperref last because otherwise some things go wrong.
-\usepackage{hyperref}
-\hypersetup{colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10,
-pdfencoding=auto, psdextra
-}
-
-% avoid weird spacing after the period here.
-\def\No#1{No.\@ #1}
-
-% make sure there is enough TOC for reasonable pdf bookmarks.
-\setcounter{tocdepth}{3}
-
-%\usepackage[dotinlabels]{titletoc}
-%\titlelabel{{\thetitle}.\quad}
-%\input{../helpers/psu-plain-titles.tex}
-%\input{../helpers/psu-sc-headers.tex}
-%\input{../helpers/fix-revtex-12.tex}
-%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
-%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
-%\pdfbookmark[1]{Introduction}{Introduction}
+\input setup
 
 \begin{document}
 
@@ -157,14 +97,14 @@ There have been period-instrument sets by Goodman (Nimbus), Hogwood (Decca), and
 
 Recommended and currently available:
 
-\startrectable
+\st
 Bernstein &DG 423481\\
 Karajan &DG 453701\\
 Walter &Sony 48099\\
 Böhm &DG 439681 (1,2,4,5)\\
 &437368 (3+9)\\
 &437928 (6,7,8)
-\endrectable
+\et
 
 \section{Symphony 1}
 
@@ -174,11 +114,11 @@ Bernstein pretty much swept the field with his Vienna recording. It's full of hi
 Monteux and Jochum are more poised. We found Dohnanyi and Leibowitz earthbound.
 Ormandy gives it more body and substance than usual. Sawallisch has the Concertgebouw Orchestra, but his lumpen approach doesn't say much with it or the music. This work is also the least strain for the period groups, so Hogwood, Norrington, and Brüggen all turn in credible but rather mechanical performances.
 
-\startrectable
+\st
 Bernstein &DG \\
 Szell& Sony 89838 (+6)\\
 Monteux& Decca 440627 (+3,6,8)
-\endrectable
+\et
 
 \section{Symphony 2}
 
@@ -187,13 +127,13 @@ Beecham is special: charming, witty, warm---Beethoven as Schubert. It's just the
 Karajan 1962 is fluent and almost relaxed sometimes---an underrated performance.
 Wand (coupled with 1) has almost as much energy and enthusiasm as Toscanini, and the playing is alert, but we wonder if Wand isn't a little too hard for this music. Leibowitz (Chesky) has the energy and great clarity plus even better sound.
 
-\startrectable
+\st
 Bernstein & DG\\
 Beecham & EMI\\
 Walter & Sony 64460 (+1)\\
 Böhm & DG 439681 (+1,4,5)\\
 Leibowitz & Chesky 17 (+5)
-\endrectable
+\et
 
 \section{Symphony 3}
 
@@ -204,14 +144,14 @@ Szell's Third is one of the best---bracing and swift but not rushed. Walter is e
 Peter Tiboris (Elysium) uses Mahler's retouchings of the orchestration to make it more suitable for large halls; interesting, witha cataclysmic Funeral March, but not vital.
 Stokowski (RCA) is rather ``straight'' but inconsistent: a vigorous I, followed by a II lacking drive, but a propulsive finale. The recently reissued Kempe (Testament) has a massive, powerful, broadly paced I. Like Böhm and Szell, he keeps a steady hand on the tempos, and the rest of the performance has incisive playing and firm rhythm. Boult takes a similar approach (Vanguard, with 5, 6, 7, overtures) with clean, organized lines and polished phrasing; the essential drama is never lacking, and tempos feel right, like Monteux and Reiner. The Dohnanyi on Telarc is gorgeously played and recorded, moves right along but can also be big and brash where it matters.
 
-\startrectable
+\st
 Bernstein & DG\\
 Böhm & DG 437368 (+9)\\
 Szell & Sony 89832 or 46328\\
 Walter & Sony 64461 (+8)\\
 Dohnanyi &Telarc 80090\\
 Kempe & Testament 1270
-\endrectable
+\et
 
 \section{Symphony 4}
 
@@ -223,13 +163,13 @@ Bernstein's New York recording is vibrant witty, and gorgeous, but of course the
 Beethoven set, and many of us love the Walter.
 The Editor adds Leinsdorf to the list.
 
-\startrectable
+\st
 Bernstein& DG 463468 (+6,9)\\
 Karajan & DG\\
 Kleiber & Orfeo 100841\\
 Walter & Sony 64462 (+6)\\
 Krips & Everest 9102 (+7)
-\endrectable
+\et
 
 \section{Symphony 5}
 
@@ -254,11 +194,11 @@ Zander (Telarc) has lickety-split tempos---another conductor trying to observe B
 metronome markings. It's good for listeners
 with short attention spans.
 
-\startrectable
+\st
 Kleiber & DG 447400 (+7)\\
 Reiner & RCA 68976\\
 Szell (Amsterdam)&  Philips 464682 or MHS
-\endrectable
+\et
 
 \section{Symphony 6}
 
@@ -267,13 +207,13 @@ Walter is just about the best all around---warm, glowing, flowing---so right tha
 Monteux comes strikingly close, as do Böhm and Klemperer. Reiner is also warm and beautiful quite a surprise, given his affinity for the
 Fifth and Seventh. Gerald Fox found Bernstein's New York recording ``wonderful'', with pastoral woodwinds, sweet strings, and no interpretive distortions; but the Vienna version seems, again, even finer---especially the Brucknerian grandeur of the finale. This is the performance that taught me to really love this work.
 
-\startrectable
+\st
 Walter & Sony 64462 (+4)\\
 Reiner & RCA\\
 Monteux  & Decca\\
 Bernstein & DG 431025\\
 Böhm &DG 437928 (+7,8) or 447433
-\endrectable
+\et
 
 \section{Symphony 7}
 
@@ -282,13 +222,13 @@ Wagner did this symphony no favors by calling it the ``Apotheosis of the Dance''
 Again, Carlos Kleiber is nearly definitive; at least it's a performance that many different kinds of listeners seem to enjoy. It is fast. Karajan's Vienna recording (Decca) is probably his best (it breathes), though the 1970s DG comes close (1962 DG is fine, too). Reiner's 7th is almost as exciting as his 5th; the finale seems as near to orchestral perfection as mortals can get (the interplay between the first and second violins is thrilling at that speed). Steinberg (EMI) has a following; our reviewer thought it a pleasure, with opening chords that have a real ``crunch'' leading to a first movement that is
 ``so inevitable you can't imagine the piece going any other way''. The Editor still responds strongly to Leinsdorf's Viennese reading on RCA. Beecham seems less driven and happier than most, but he is among the fastest and gets through the whole thing in 26 minutes. Böhm is still the antidote for those who don't like breathless Sevenths, but Walter seems a better compromise between openness and expeditiousness, and it's one of the high points of his set. Colin Davis is the choice if you want to get through the work as quickly as possible. Muti offered some Reiner-like precision and inevitability in an underrated performance.
 
-\startrectable
+\st
 Kleiber & DG 447400 (+5)\\
 Reiner & RCA\\
 Karajan & DG\\
 Walter & Sony 64463 (+5)\\
 Beecham & EMI
-\endrectable
+\et
 
 \section{Symphony 8}
 
@@ -297,11 +237,11 @@ For an all-around balance of polish and high spirits, Monteux (Decca) may be our
 Some older critics like Scherchen, but he is so fast! (exciting, too). Most of us hate the Dohnanyi. Ormandy is less pushy and beautifully played, but I've got to stick with my preferences for Munch (RCA) and the large-scale but un-cumbersome analog Solti (Decca).
 Karajan, Bernstein, Haitink, Szell, and Walter are all fine, too; and again Steinberg finds favor in some quarters, but only the most recent EMI remastering.
 
-\startrectable
+\st
 Monteux & Decca\\
 Solti  & Decca 417765\\
 Ormandy & Sony 63266 (+5,7)
-\endrectable
+\et
 
 \section{Symphony 9}
 
@@ -330,14 +270,14 @@ too reserved in the slow movement. Macal
 Milwaukee Symphony, but he insists on mal find
 ing the music stiff and rigid.
 
-\startrectable
+\st
 Furtwängler & Tahra 1003\\
 Karajan & DG 447401\\
 Dohnanyi &Telarc 80120\\
 Muti & Seraphim 73284\\
 Reiner & RCA \\
 Szell & Sony 60987
-\endrectable
+\et
 
 \section{Piano Concertos}
 
@@ -404,7 +344,7 @@ There are so many recordings, it's hard know where to begin. As you migght expec
 
 The Cliburn/Reiner (RCA) should have been a better performance, but pianist and conductor seem to be phoning it in (the 4th, on the same disc, is no better). Serkin (Sony) as usual, plays it straight, but Bernstein dances capers around him---different but exciting. Connoisseurs favor the straightforward Kempff/Leitner, so I'd better mention them, but as my comments about their whole set suggest, I find them too reticent. Edwin Fischer and Furtwängler (EMI) are perhaps the most Apollonian of all---a performance so beautiful it must be mentioned despite (very good) monaural sound. Bachauer and Skrowaczenski are more earthbound (earthy?) but still expansive. Among more recent recordings, Kissin/Levine is uncommonly commanding and expressive, Kissin a less fastidious pianist than Brendel. Katchen is in his element, and if his conductor, Gamba, is not the most inventive of accompanists, he is at least supporting without drawing the wrong kind of attention to himself. Carl Bauman approved the Firkusny/Steinberg (same disc as 3), but we wonder if the sound, despite refurbishment for CD, isn't showing its age.
 
-\startrectable
+\st
 Sets: & \\
 \hline\\
 \quad Ashkenazy/Solti & Decca 443 723\\
@@ -414,7 +354,7 @@ Sets: & \\
 & 63058 (4+5), \\
 & 63059 (2)\\[1em]
 \hline\\
-\endrectable
+\et
 \bigskip
 
 \begin{tabular}{l l r}
@@ -439,7 +379,7 @@ Mutter's more recent account with Masur
 The piano version of this concerto is the composer's arrangement, with the solo part recast for the piano's right hand and busywork added for the left. Barenboim, playing and conducting the English Chamber Orchestra, was probably the best, but DG has reissued it only
 in a big set with many other pieces. RCA has yet to reissue Peter Serkin with Ozawa---a fine recording. Don't bother with the hectic, slapdash Mustonen (Decca) when you can have Pietro Spada/Gibson (ASV): majestic, warm, and deeply-felt---a rival for the violin version.
 
-\startrectable
+\st
 Heifetz/Munch & RCA 68980\\
 Stern/Barenboim & Sony 42613\\
 Zukerman/Barenboim & DG 435 099\\
@@ -447,26 +387,26 @@ Menuhin/Furtwängler & EMI 66990\\
 Mutter/Karajan & DG 457 861\\
 Milstein/Steinberg & EMI 67584 \\
 Francescatti/Walter & Sony 47659
-\endrectable
+\et
 
 \bigskip
 \noindent
 Piano Version:
 
-\startrectable
+\st
 Barenboim & DG 453707\\
 Serkin/Ozawa & RCA\\
 Spada/Gibson & ASV 911
-\endrectable
+\et
 
 \section{Triple Concerto}
 
 The Triple Concerto is not as exalted a work as the 4th or 5th Piano Concerto or the Violin Concerto, but it is a tuneful, cheerful work, and the combination is pleasant. Beethoven's Archduke Trio is one of the greatest---if not the greatest---piano trios, so it is fitting that he supplied the only regularly performed concerto for this configuration. In the last overview, we favored the Trio Fontenay (Teldec), but many will prefer Perlman-Ma-Barenboim (EMI) or Oistrakh-Rostropovich-Richter/Karajan (EMI), which displays four great artists at the peaks of their powers (even if you get better teamwork from an established trio). The recent Trio Wanderer (Chant du Monde) offers unanimity and polish from soloists, but James Conlon is just too fast and businesslike.
 
-\startrectable
+\st
 Oistrakh-Rostropovich-Richter/Karajan & EMI 66092 (+PC4)\\
 Perlman-Ma-Barenboim & EMI 55516
-\endrectable
+\et
 
 \section{Overtures}
 
