--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -165,6 +165,63 @@ It was written in 1865, same year as the First; but this one he did hear
 performed---many years later, in 1888---and by that time he had revised it and
 shortened it (but it's still too long). It was not published until 1959.
 
+Carl Bauman likes it better than the rest of us, and he recommends the loving account of Kertesz
+and the superior Kubelik. He calls the Neumann "flaccid" and "a disaster" , but both
+he and Steven Haller find the Järvi a decent third choice.
+The Gunzenhauser (Naxos) is in that same category. 
+Kurt Moses reviewed the Pesek (July/Aug 1996) and seemed quite bored by it. The sound is terrific.
+
+\st
+Berlin/Kubelik & DG set or MHS 564673\\
+London Sym/Kertesz & London NA
+\et
 
 
+\section*{Symphony 3}
+
+
+This one came eight years after the first two, and it was performed: Simetana led
+the Prague Philharmonic. It's the only Dvorak symphony with only three movements. 
+The middle one is his longest slow movement. It's basically a theme and variations,
+but the theme gives birth to themelets. In the middle of it a catchy march-like
+section in pure Dvorak rhythm (dum, dum, dum-da-DUM-dum) acts as a scherzo.
+It builds up, then sub-sides; but it returns slower and quieter in the coda
+of the movement. Dvorak still hasn't written a good slow movement, 
+but there is a sort of genius in the way this is organized-and you'll never forget that march.
+
+The opening movement has wonderful flow and warmth; you are hooked right from the start. And the finale has an excitement and drive that will remind you of Schubert's Ninth.
+Dvorak has Schubert's light-hearted playful-ness, too. Still, the orchestration of this symphony is sumptuous, almost Wagnerian. But, Schubert and Wagner aside, Dvorak always sounds only like Dvorak---he could never be mistaken for anyone else. And he loved this symphony all his life. Brahms loved it, too, and thought it worthy of the Austrian State Prize.
+(The critic Hanslick was also on the committee, and Dvorak got a five-year government grant out of it.)
+
+Järvi is much smoother than Kubelik. He has a natural flow and is both confident and serene. Kubelik is frantic, raucous, blasty---out to prove something---except in II. Järvi is faster, except in III. 
+In II Kubelik constantly manipulates the tempos, fusses all the time, 
+and loses the pulse of the march (it's deadly) and the spirit of the piece. 
+Järvi lets the music carry him along. The Adagio is bland and has no character, until the march breaks in.
+Kubelik tries to give it character but fails. Järvi plows thru it almost two minutes
+faster to get to the march—because that's where the movement comes alive.
+Kubelik takes 5 minutes for the march, playing around with its tempos to get more
+expression out of it. Again it sounds manipulated. Järvi takes almost two minutes less,
+never letting up on its forward motion.
+I'm with Järvi. Once the march is essentially
+over, the movement never quite falls back to its bland beginning; the march has given life to the other themes too! The Berlin Philharmonic saves the day again and again. The strings especially are way ahead of any other orchestra that has recorded this. But up to this point Kubelik has not won our hearts the way Dvorak should.
+
+Kubelik drives things on to an exciting conclusion, but it still sounds manipulated.
+Symphony 3 is Kubelik's worst recording. Järvi is again utterly natural, the music finding a more comfortable pace but building almost inexorably to a thrilling conclusion.
+Those two are the contrasting recordings.
+Kertesz is much closer to Järvi than Kubelik and could also be considered close to ideal.
+Pesek on Virgin is a little on the slow side but very natural. The relaxed, leisurely pace allows for some lovely turns of phrase; and the sound is warm, creamy, and rich. Neumann is middle-of-the-road---a little rough in I---but has harsh sound. The Naxos sound for Gunzen-hauser is the opposite: too mellow and blended. The music needs an edge somewhere, and we should hear the woodwinds.
+
+The Koss (Macal) is also rather mellow; but it's closer-up than the Järvi and without the reverberation. I rather like the atmospheric Chandos sound, but if you dislike echo you'll prefer Macal. In some climaxes everything gets jumbled together---but I like that; one often hears it like that in real life. The conducting is good in both cases, but Järvi is inclined to make more of the climaxes and more inclined to majesty. Macal takes the slow movement much slower and the last movement faster.
+That makes it seem less gentle and attractive a little brusque, I think. But Milwaukee is a better orchestra than the Scots in every department (both could use more strings), and the Koss engineers supply more warmth and clarity and less echo. For my money no one comes near Järvi in 3. Rowicki is rather general and vague, Suitner even more so.
+
+\st
+Scots/Järvi & Chandos 8575\\
+Milwaukee/Macal & Koss 1019\\
+London Sym/Kertesz & London set (NA)
+\et
+
+\section*{Symphony 4}
+
+This is less smooth and flowing than \No3. It has two striking Dvorak rhythms
+and two gorgeous flowing melodies. You get one of each in I; the rhythm is TA-ta-tum-te-DUM. II is a long theme with variations-very Wagnerian; it is not very original, but it's his best slow movement so far. Ill is a swaggering scherzo-village music. Then comes the repetitious IV, where the first theme is another Dvorak rhythm---rum-tum, RUM-ti-tum---heard 17 times—and the second one of his trademark flowing melodies. The overall
 \end{document}
